--- a/package.json
+++ b/package.json
@@ -21,7 +21,12 @@
   "scripts": {
     "build": "rollup -c && cp src/manifest.json build",
     "dev": "npm run build && rollup -cw",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "eslint src"
+  },
+  "devDependencies": {
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.12.0"
   },
   "private": true
 }
